Panopoly Test 7.x-1.87, 2022-02-17
-------------------
- Update to Drupal 7.88 for SA-CORE-2022-003.

Panopoly Test 7.x-1.86, 2022-01-26
-------------------
- No changes since last release.

Panopoly Test 7.x-1.85, 2022-01-20
-------------------
- No changes since last release.

Panopoly Test 7.x-1.84, 2022-01-05
-------------------
- Bring testing and CI infrastructure for Panopoly 1.x and 2.x in line.

Panopoly Test 7.x-1.83, 2021-07-21
-------------------
- No changes since last release.

Panopoly Test 7.x-1.82, 2021-07-21
-------------------
- Specify default configurations in Behat test suite.

Panopoly Test 7.x-1.81, 2021-06-10
-------------------
- "Content item" widget gives validation error if attempting to use a piece
  of content with a title longer than 128 characters.
- Manual Crop doesn't work with strong Content Security Policy.

Panopoly Test 7.x-1.80, 2021-04-26
-------------------
- No changes since last release.

Panopoly Test 7.x-1.79, 2021-01-20
-------------------
- No changes since last release.

Panopoly Test 7.x-1.78, 2020-11-30
-------------------
- No changes since last release.

Panopoly Test 7.x-1.77, 2020-11-19
-------------------
- Patch contrib modules for PHP 7.4.

Panopoly Test 7.x-1.76, 2020-09-17
-------------------
- No changes since last release.

Panopoly Test 7.x-1.75, 2020-06-18
-------------------
- Update the Behat Drupal extension to 4.0.1.
- Detect PHP notices/errors.

Panopoly Test 7.x-1.74, 2020-05-20
-------------------
- Patch Tablefield for header row orientation per widget.
- Modifying content of reusable widgets doesn't actually save when first
  adding the widget.
- Update WYSIWYG to version 2.6.

Panopoly Test 7.x-1.72, 2019-12-19
-------------------
- Switch File widget to use Media Browser.
- Tests fail with Radix.

Panopoly Test 7.x-1.71, 2019-11-19
-------------------
- Display type setting doesn't work for overridden views displays.
- Backport support for PANOPOLY_BEHAT_WINDOW_SIZE from 8.x-2.x.