@@ -9,7 +9,7 @@ default:
       base_url: 'http://appserver'
       files_path: './profiles/panopoly/modules/panopoly/panopoly_test/behat'
       selenium2:
-        wd_host: http://chromedriver:4444/wd/hub
+        wd_host: http://selenium:4444/wd/hub
         #wd_host: http://172.17.0.1:4444/wd/hub
     Drupal\DrupalExtension:
       drush:
