@@ -101,8 +101,8 @@ features_exclude[dependencies][panopoly_pages] = panopoly_pages
 features_exclude[dependencies][panelizer] = panelizer
 hidden = 1
 
-; Information added by Drupal.org packaging script on 2022-02-17
-version = "7.x-1.87"
+; Information added by Drupal.org packaging script on 2022-05-04
+version = "7.x-1.88"
 core = "7.x"
 project = "panopoly_test"
-datestamp = "1645136768"
+datestamp = "1651693337"
