@@ -1,3 +1,7 @@
+Panopoly Test 7.x-1.88, 2022-05-04
+-------------------
+- Update automated tests to use Chrome 100.
+
 Panopoly Test 7.x-1.87, 2022-02-17
 -------------------
 - Update to Drupal 7.88 for SA-CORE-2022-003.
